modificaciones luego de hablar con Andres

--- a/test/fixtures/mantenimientos.yml
+++ b/test/fixtures/mantenimientos.yml
@@ -21,6 +21,6 @@ four:
   maquina: beta
   horometro: 1000
   reporte: fertilizadoras
-  insumo: aceite
+  insumo: filtro
   cantidad: 50
   costoestandar: 3
