--- a/test/fixtures/compras.yml
+++ b/test/fixtures/compras.yml
@@ -1,5 +1,3 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
 one:
   fecha: 2016-02-04
   maquina: alfa
@@ -9,7 +7,6 @@ one:
   valor: 15.33
   comprobante: 123456
   reporte: fertilizadoras
-
 two:
   fecha: 2016-02-04
   maquina: beta
@@ -19,3 +16,21 @@ two:
   valor: 11.22
   comprobante: 4321
   reporte: fertilizadoras
+three:
+  fecha: 2016-02-04
+  maquina: mosquito
+  proveedor: roncoco
+  insumo: matafuel de presion continua
+  obs:
+  valor: 500
+  comprobante: 4321
+  reporte: fumigadoras
+four:
+  fecha: 2016-02-04
+  maquina: aguatero
+  proveedor: roncoco
+  insumo: aguador cilindrico
+  obs:
+  valor: 300
+  comprobante: 4321
+  reporte: fumigadoras
